--- a/users/pom.xml
+++ b/users/pom.xml
@@ -16,4 +16,16 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+                <dependency>
+                    <groupId>com.playtika.reactivefeign</groupId>
+                    <artifactId>feign-reactor-core</artifactId>
+                    <version>3.2.6</version>
+                </dependency>
+<!--                <dependency>-->
+<!--                    <groupId>com.playtika.reactivefeign</groupId>-->
+<!--                    <artifactId>feign-reactor-spring-configuration</artifactId>-->
+<!--                    <version>3.2.6</version>-->
+<!--                </dependency>-->
+    </dependencies>
 </project>
